# investimentos

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  streamlit_app.py  styles.py
app/pages/: 1_Terminal.py  2_Carteira.py  3_Macro.py  4_Renda_Fixa.py  5_Acoes_FIIs.py  6_Relatorios_IA.py  7_Open_Finance.py
docs/: architecture.md  commands.md  data_sources.md
src/: __init__.py
src/ai/: __init__.py  document_loader.py  prompts.py  rag.py
src/analytics/: __init__.py  fixed_income.py  macro.py  portfolio.py  returns.py  risk.py  technical.py
src/commands/: __init__.py  macro.py  quote_compare.py
src/data/: __init__.py  bcb.py  cvm.py  errors.py  firefly.py  http.py  openbb_client.py  pluggy.py  tesouro.py
src/storage/: __init__.py  cache.py  settings.py
src/terminal/: __init__.py  app.py  commands.py  parser.py  registry.py
tests/: test_ai_documents.py  test_bcb.py  test_cache.py  test_cvm.py  test_data_errors.py  test_firefly.py  test_fixed_income.py  test_imports.py  test_macro.py  test_macro_commands.py  test_openbb_client.py  test_pluggy.py  test_portfolio.py  test_quote_compare_commands.py  test_returns_risk.py  test_terminal.py  test_tesouro.py
