[project]
name = "terminal-investimentos"
version = "0.1.0"
description = "Terminal de Investimentos MVP em Streamlit com OpenBB."
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "openbb",
    "plotly",
    "pandas",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
